# dianshang

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GAME_VIDEO_TOOL_HANDOFF_20260420.md  README.md  docker-compose.yml  run-local-backend.cmd  run-local-backend.ps1  run-local-frontend.cmd  run-local-frontend.ps1  start-local-online-preview.ps1  start-local-test.ps1  start-public-file-bridge.ps1  本地测试启动说明.md
deploy/: auth-account-audit.py  backup-game-video-data.sh  backup-game-video-dbs.sh  create-release-package.sh  crontab.example  disk-guard.sh  game-video-switch-upstream.sh  game-video-tool.service  game-video-tool@.service  health-report.py  install-frontend-dist.sh  media-audit.py  media-cleanup-allowlist.py  media-cleanup-execute.py  media-cleanup-plan.py  media-cleanup-preflight.py  media-dedupe.py  nginx-game-video-tool-blue-green.conf.example  nginx-game-video-tool.conf.example  performance-report.py  production-inspect.sh  rotate-app-log.sh  server-health-watch.py  storage-lifecycle.py  sudoers-game-video-zero-downtime.example  task-auto-heal-dry-run.py  task-failure-report.py  task-stale-watch.py  task-state-audit.py  task-state-probe.py  task-state-repair.py  zero-downtime-infra-preflight.py  zero-downtime-release.py
docs/: ACCOUNT_OPERATIONS_SOP.md  CHANGE_CHECKLIST.md  COLLABORATION_WORKFLOW.md  CURRENT_STATUS_AND_ROADMAP.md  DATA_LIFECYCLE_AND_DISK_POLICY.md  DEFAULT_EXECUTION_SUMMARY.md  HARD_RULES.md  (+6 more)
server/: auth.py  (+30 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+130 files in other folders)
