[package]
name = "pieceai"
version = "1.5.2"
description = "玩皮AI Desktop - AI Video Creation Platform"
authors = ["玩皮AI Team"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pieceai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
